@@ -1,0 +1,20 @@
+body {
+	font-family: sans-serif;
+	font-size: 1em;
+}
+
+table {
+    border-collapse: collapse;
+}
+
+table, th, td {
+   border: 1px solid black;
+}
+
+th, td {
+	padding: 5px;
+}
+
+tbody tr:nth-child(odd) td {
+	background-color: #ccc;
+}
